--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Company Profile</title>
+    <title>Mocakah Corporate</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +26,7 @@
       class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">Rumahrafif.</a>
+        <a class="navbar-brand" href="#">Rumah saya</a>
         <button
           class="navbar-toggler"
           type="button"
